// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`section component matches the existing snapshot WITH a title and children 1`] = `
<div>
  <section
    aria-label="test-title section"
    class="lightModeSection section"
  >
    <h2
      class="lightModeTitle title"
    >
      test-title
    </h2>
    <p>
      Hello World
    </p>
  </section>
</div>
`;

exports[`section component matches the existing snapshot WITHOUT a title and WITH children 1`] = `
<div>
  <section
    aria-label="undefined section"
    class="lightModeSection section"
  >
    <p>
      Hello World
    </p>
  </section>
</div>
`;
